Bug #1982: Header - Tooltips for intercom and chat has z-index issue

--- a/Cloudents.Web/ClientApp/components/app/app.less
+++ b/Cloudents.Web/ClientApp/components/app/app.less
@@ -8,7 +8,7 @@ html {
 }
 
 .v-tooltip__content{
-  z-index: 102 !important;
+  z-index: 202 !important;
 }
 
 .set-class-dropdown-container {
